--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,5 @@
 .about {
-  height: fit-content;
+  height: 90vh;
   width: 80vw;
   text-align: center;
   justify-content: center
@@ -11,7 +11,7 @@ h1 {
   margin-bottom: 2px;
   text-align: center;
   color: rgb(255, 255, 255);
-  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 7px 0 #000, -1px 0 0 #000;
+  text-shadow: 3px 5px 5px  rgb(14, 1, 1);
   justify-content: center
 }
 
@@ -20,7 +20,7 @@ h2 {
   margin-bottom: 2px;
   text-align: center;
   color: rgb(255, 255, 255);
-  text-shadow: 5px 0 0 #000, 0 -1px 0 #000, 0 7px 0 #000, -1px 0 0 #000;
+  text-shadow: 3px 5px 5px  rgb(14, 1, 1);
 }
 
 button {
@@ -51,7 +51,7 @@ button:hover {
   /* padding: 100px; */
   /* float: right; */
   /* margin-left: 100px; */
-  text-align: center;
+  text-align: top;
   justify-content: center;
   box-shadow: 5px 10px 18px black;
 }
